add html content

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <main>
       <h1>CatPhotoApp</h1>
+      <a href="./index2.html">main</a>
       <section>
         <h2>Cat Photos</h2>
         <!-- TODO: Add link to cat photos -->
