--- a/footer.partial.html
+++ b/footer.partial.html
@@ -17,10 +17,10 @@
     </div>
     <div>
         <ul>
-            <li><a href="facebook.com"><img src="img/social-icons.webp" alt="facebook icon"></a></li>
-            <li><a href="instagram.com"><img src="img/social-icons.webp" alt="instagram icon"></a></li>
-            <li><a href="youtube.com"><img src="img/social-icons.webp" alt="youtube icon"></a></li>
-            <li><a href="twitter.com"><img src="img/social-icons.webp" alt="twitter icon"></a></li>
+            <li><a href="https://facebook.com"><img src="img/social-icons.webp" alt="facebook icon"></a></li>
+            <li><a href="https://instagram.com"><img src="img/social-icons.webp" alt="instagram icon"></a></li>
+            <li><a href="https://youtube.com"><img src="img/social-icons.webp" alt="youtube icon"></a></li>
+            <li><a href="https://twitter.com"><img src="img/social-icons.webp" alt="twitter icon"></a></li>
         </ul>
         <p>© Created by | All rights Reserved</p>
     </div>
