--- a/main-join-us.partial.html
+++ b/main-join-us.partial.html
@@ -9,15 +9,15 @@
         </p>
         <ul>
             <li>
-                <img src="" alt="">
+                <img src="img/lotus-icon.svg" alt="lotus icon">
                 Basic poses;
             </li>
             <li>
-                <img src="" alt="">
+                <img src="img/lotus-icon.svg" alt="lotus icon">
                 Transitional movements;
             </li>
             <li>
-                <img src="" alt="">
+                <img src="img/lotus-icon.svg" alt="lotus icon">
                 How to breath properly.
             </li>
         </ul>
