--- a/index2.html
+++ b/index2.html
@@ -9,43 +9,24 @@
     <link rel="stylesheet" href="css/global.css">
 </head>
 <body>
-    <header>
-        <section data-include="header.partial.html"></section>
-    </header>
+    <header data-include="header.partial.html"></header>
     <main>
-        <section data-include="main-beauty-and-mind.partial.html">
-        </section>
-        <section data-include="main-offer.partial.html">
-        </section>
-        <section data-include="main-video.partial.html">
-        </section>
-        <section data-include="main-about-us.partial.html">
-        </section>
-        <section data-include="main-join-us.partial.html">
-        </section>
-        <section data-include="main-yoga-is-answer.partial.html">
-        </section>
-        <section data-include="main-classes.partial.html">
-        </section>
-        <section data-include="main-transform-yourself.partial.html">
-        </section>
-        <section data-include="main-teacher-training.partial.html">
-        </section>
-        <section data-include="main-pricing.partial.html">
-        </section>
-        <section data-include="main-photos.partial.html">
-        </section>
-        <section data-include="main-testimonials.partial.html">
-        </section>
-        <section data-include="main-special-offer.partial.html">
-        </section>
-        <section data-include="main-news.partial.html">
-        </section>
+        <section data-include="main-beauty-and-mind.partial.html"></section>
+        <section data-include="main-stidio-offers.partial.html"></section>
+        <section data-include="main-video.partial.html"></section>
+        <section data-include="main-about-us.partial.html"></section>
+        <section data-include="main-join-us.partial.html"></section>
+        <section data-include="main-yoga-is-answer.partial.html"></section>
+        <section data-include="main-classes.partial.html"></section>
+        <section data-include="main-transform-yourself.partial.html"></section>
+        <section data-include="main-teacher-training.partial.html"></section>
+        <section data-include="main-pricing.partial.html"></section>
+        <section data-include="main-photos.partial.html"></section>
+        <section data-include="main-testimonials.partial.html"></section>
+        <section data-include="main-special-offer.partial.html"></section>
+        <section data-include="main-news.partial.html"></section>
     </main>
-
-    <footer>
-        <section data-include="footer.partial.html"></section>
-    </footer>
+    <footer data-include="footer.partial.html"></footer>
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
 </body>
 </html>
