--- a/main-classes.partial.html
+++ b/main-classes.partial.html
@@ -1,41 +1,39 @@
-<section>
-    <div>
-        <h4>CLASSES</h4>
-        <h2>The Variety of Yoga Classes</h2>
-        <h3>Select classes you would like to take.</h3>
+<section class="classes">
+    <div class="classes__main">
+        <p class="classes__main-annotation">CLASSES</p>
+        <h2 class="classes__main-title">The Variety of Yoga Classes</h2>
+        <p class="classes__main-subtitle">Select classes you would like to take.</p>
     </div>
-    <div>
-        <ul>
-            <li>
-                <img src="img/woman-in-lotus-pose.png" alt="woman sitting in lotus pose">
-                <h4>LEVEL 1</h4>
-                <h2>Prenatal Yoga</h2>
-            </li>
-            <li>
-                <img src="img/two-women-with-yoga-mats.png" alt="two women holding yoga mats and smile to each other">
-                <h4>LEVEL 1-3</h4>
-                <h2>Vinyasa Yoga</h2>
-            </li>
-            <li>
-                <img src="img/group-in-downward-facing-dog-pose.png" alt="group of women perform downward facing dog pose">
-                <h4>ALL LEVELS</h4>
-                <h2>Asthanga Yoga</h2>
-            </li>
-            <li>
-                <img src="img/woman-in-pigeon-pose.png" alt="woman look forward to camera and perform pigeon pose">
-                <h4>LEVEL 1</h4>
-                <h2>Yoga Basics</h2>
-            </li>
-            <li>
-                <img src="img/group-in-lotus-pose.png" alt="group of people sitting in lotus pose">
-                <h4>ALL LEVELS</h4>
-                <h2>Yin Yoga</h2>
-            </li>
-            <li>
-                <img src="img/woman-in-king-pigeon-pose.png" alt="woman perform king pigeon pose">
-                <h4>ALL LEVELS</h4>
-                <h2>Hatha Yoga</h2>
-            </li>
-        </ul>
+    <div class="classes__carousel">
+        <div class="classes__carousel-item">
+            <img class="classes__carousel-photo" src="img/woman-in-lotus-pose.png" alt="woman sitting in lotus pose">
+            <p class="classes__carousel-annotation">LEVEL 1</p>
+            <h2 class="classes__carousel-title">Prenatal Yoga</h2>
+        </div>
+        <div class="classes__carousel-item">
+            <img class="classes__carousel-photo" src="img/two-women-with-yoga-mats.png" alt="two women holding yoga mats and smile to each other">
+            <p class="classes__carousel-annotation">LEVEL 1-3</p>
+            <h2 class="classes__carousel-title">Vinyasa Yoga</h2>
+        </div>
+        <div class="classes__carousel-item">
+            <img class="classes__carousel-photo" src="img/group-in-downward-facing-dog-pose.png" alt="group of women perform downward facing dog pose">
+            <p class="classes__carousel-annotation">ALL LEVELS</p>
+            <h2 class="classes__carousel-title">Asthanga Yoga</h2>
+        </div>
+        <div class="classes__carousel-item">
+            <img class="classes__carousel-photo" src="img/woman-in-pigeon-pose.png" alt="woman look forward to camera and perform pigeon pose">
+            <p class="classes__carousel-annotation">LEVEL 1</p>
+            <h2 class="classes__carousel-title">Yoga Basics</h2>
+        </div>
+        <div class="classes__carousel-item">
+            <img class="classes__carousel-photo" src="img/group-in-lotus-pose.png" alt="group of people sitting in lotus pose">
+            <p class="classes__carousel-annotation">ALL LEVELS</p>
+            <h2 class="classes__carousel-title">Yin Yoga</h2>
+        </div>
+        <div class="classes__carousel-item">
+            <img class="classes__carousel-photo" src="img/woman-in-king-pigeon-pose.png" alt="woman perform king pigeon pose">
+            <p class="classes__carousel-annotation">ALL LEVELS</p>
+            <h2 class="classes__carousel-title">Hatha Yoga</h2>
+        </div>
     </div>
 </section>
