--- a/main-photos.partial.html
+++ b/main-photos.partial.html
@@ -1,9 +1,7 @@
-<section>
-    <ul>
-        <li><img src="img/photos/photo1.png" alt="woman perform dhanurasana pose"></li>
-        <li><img src="img/photos/photo2.png" alt="woman join her hands infront of her chest"></li>
-        <li><img src="img/photos/photo3.png" alt="woman in downward facing dog pose with raised one leg up.png"></li>
-        <li><img src="img/photos/photo4.png" alt="woman in equestrian pose"></li>
-        <li><img src="img/photos/photo5.png" alt="two women in lotus pose talk to each other"></li>
-    </ul>
+<section class="photos">
+    <img class="photos__photo" src="img/photos/photo1.png" alt="woman perform dhanurasana pose"></li>
+    <img class="photos__photo" src="img/photos/photo2.png" alt="woman join her hands infront of her chest"></li>
+    <img class="photos__photo" src="img/photos/photo3.png" alt="woman in downward facing dog pose with raised one leg up.png"></li>
+    <img class="photos__photo" src="img/photos/photo4.png" alt="woman in equestrian pose"></li>
+    <img class="photos__photo" src="img/photos/photo5.png" alt="two women in lotus pose talk to each other"></li>
 </section>
