--- a/main-pricing.partial.html
+++ b/main-pricing.partial.html
@@ -1,43 +1,45 @@
-<section>
-    <h4>PRISING</h4>
-    <h2>Yoga Pricing Plans</h2>
-    <h3>We offer yearly and monthly memberships, class passes, and special online memberships.</h3>
-    <ul>
-        <li>
-            <img src="img/yoga-pose-icons/monthly-membership.svg" alt="yoga pose icon">
-            <h2>Monthly Membership</h2>
-            <p>Get your monthly membership and practice yoga without limits.</p>
+<section class="pricing">
+    <div class="pricing__main">
+        <p class="pricing__main-annotation">PRISING</p>
+        <h2 class="pricing__main-title">Yoga Pricing Plans</h2>
+        <p class="pricing__main-subtitle">We offer yearly and monthly memberships, class passes, and special online memberships.</p>
+    </div>
+    <div class="pricing__content">
+        <div class="pricing__content-item pricing__item">
+            <img class="pricing__item-image" src="img/yoga-pose-icons/monthly-membership.svg" alt="yoga pose icon">
+            <h2 class="pricing__item-title">Monthly Membership</h2>
+            <p class="pricing__item-text">Get your monthly membership and practice yoga without limits.</p>
             <ul>
-                <li><span> 9-Month Unlimited </span>$1200</li>
-                <li><span> 6-Month Unlimited </span>$600</li>
-                <li><span> 3-Month Unlimited </span>$350</li>
-                <li><span> 1-Month Unlimited </span>$120</li>
+                <li class="pricing__item-list-item"><span> 9-Month Unlimited </span>$1200</li>
+                <li class="pricing__item-list-item"><span> 6-Month Unlimited </span>$600</li>
+                <li class="pricing__item-list-item"><span> 3-Month Unlimited </span>$350</li>
+                <li class="pricing__item-list-item"><span> 1-Month Unlimited </span>$120</li>
             </ul>
             <a href="#">JOIN US NOW</a>
-        </li>
-        <li>
-            <img src="img/yoga-pose-icons/class-passes.svg" alt="yoga pose icon">
-            <h2>Class Passes</h2>
-            <p>Choose the number of sessions you need and use them within 3 months.</p>
-            <ul>
-                <li><span> 1 Class </span>$80</li>
-                <li><span> 5 Classes </span>$125</li>
-                <li><span> 7 Classes </span>$150</li>
-                <li><span> 10 Classes </span>$250</li>
+        </div>
+        <div class="pricing__content-item pricing__item">
+            <img class="pricing__item-image" src="img/yoga-pose-icons/class-passes.svg" alt="yoga pose icon">
+            <h2 class="pricing__item-title">Class Passes</h2>
+            <p class="pricing__item-text">Choose the number of sessions you need and use them within 3 months.</p>
+            <ul class="pricing__item-list">
+                <li class="pricing__item-list-item"><span> 1 Class </span>$80</li>
+                <li class="pricing__item-list-item"><span> 5 Classes </span>$125</li>
+                <li class="pricing__item-list-item"><span> 7 Classes </span>$150</li>
+                <li class="pricing__item-list-item"><span> 10 Classes </span>$250</li>
             </ul>
             <a href="#">JOIN US NOW</a>
-        </li>
-        <li>
-            <img src="img/yoga-pose-icons/online-classes.svg" alt="yoga pose icon">
-            <h2>Online Classes</h2>
-            <p>Practice yoga online from anywhere in the world with our coaches.</p>
+        </div>
+        <div class="pricing__content-item pricing__item">
+            <img class="pricing__item-image" src="img/yoga-pose-icons/online-classes.svg" alt="yoga pose icon">
+            <h2 class="pricing__item-title">Online Classes</h2>
+            <p class="pricing__item-text">Practice yoga online from anywhere in the world with our coaches.</p>
             <ul>
-                <li><span> 1 Class </span>$70</li>
-                <li><span> 5 Classes </span>$100</li>
-                <li><span> Private Lesson </span>$90</li>
-                <li><span> Monthly </span>$120</li>
+                <li class="pricing__item-list-item"><span> 1 Class </span>$70</li>
+                <li class="pricing__item-list-item"><span> 5 Classes </span>$100</li>
+                <li class="pricing__item-list-item"><span> Private Lesson </span>$90</li>
+                <li class="pricing__item-list-item"><span> Monthly </span>$120</li>
             </ul>
             <a href="#">JOIN US NOW</a>
-        </li>
-    </ul>
+        </div>
+    </div>
 </section>
