--- a/main-teacher-training.partial.html
+++ b/main-teacher-training.partial.html
@@ -1,23 +1,23 @@
-<section>
-    <div>
-        <img src="img/woman-in-boat-pose.png" alt="woman perform boat pose">
+<section class="teacher">
+    <div class="teacher__container">
+        <img class="teacher__container-image" src="img/woman-in-boat-pose.png" alt="woman perform boat pose">
     </div>
-    <div>
-        <h4>TEACHER TRAINING</h4>
-        <h2>Become a Teacher or Just Improve Your Practice</h2>
-        <h3>We offer classes for all skill levels.</h3>
-        <p>
+    <div class="teacher__content">
+        <p class="teacher__content-annotation">TEACHER TRAINING</p>
+        <h2 class="teacher__content-title">Become a Teacher or Just Improve Your Practice</h2>
+        <p class="teacher__content-subtitle">We offer classes for all skill levels.</p>
+        <p class="teacher__content-text">
             Based on the tradition of authentic ancestors, our program is aimed 
             at bringing yoga back to its true home as an alive art and as a comprehensive way to revival.
         </p>
-        <p>
+        <p class="teacher__content-text">
             We are highly experienced teachers committed to providing a clear education while 
             enabling you to reveal your true abilities and potential.
         </p>
-        <p>
+        <p class="teacher__content-text">
             You can practice yoga for your own development or become an instructor after mastering all 
             levels. We offer vast opportunities for professional training of future yoga coaches.
         </p>
-        <a href="#">FIND TRAINING</a>
+        <a class="teacher__content-link button" href="#">FIND TRAINING</a>
     </div>
 </section>
