--- a/main-testimonials.partial.html
+++ b/main-testimonials.partial.html
@@ -1,44 +1,44 @@
-<section>
-    <div>
-        <h4>TESTIMONIALS</h4>
-        <h2>Clients Say About Us</h2>
-        <h3>We appreciate your warm words and thoughts.</h3>
+<section class="testimonials">
+    <div class="testimonials__main">
+        <p class="testimonials__main-annotation">TESTIMONIALS</p>
+        <h2 class="testimonials__main-title">Clients Say About Us</h2>
+        <p class="testimonials__main-subtitle">We appreciate your warm words and thoughts.</p>
     </div>
-    <div>
-        <ul>
-            <li>
-                <img src="img/clients/lucile-peterson.png" alt="photo of client">
-                <h2>Lucile Peterson</h2>
-                <p>
+    <div class="testimonials__content">
+        <div  class="testimonials__content-carousel testimonials__carousel">
+            <article class="testimonials__carousel-item">
+                <img class="testimonials__carousel-photo" src="img/clients/lucile-peterson.png" alt="photo of client">
+                <h2 class="testimonials__carousel-client-name">Lucile Peterson</h2>
+                <p class="testimonials__carousel-comment">
                     "Thanks to yoga classes at the Atta Yoga studio, 
                     I have become much calmer and more organized in my thoughts and actions. 
                     Yoga is really good option for those who don't like the usual active gym workouts. 
                     I love my yoga classes at Atta!"
                 </p>
-                <h4>DECEMBER 15,2021</h4>
-            </li>
-            <li>
-                <img src="img/clients/gillian-adler.png" alt="photo of client">
-                <h2>Gillian Adler</h2>
-                <p>
+                <p class="testimonials__carousel-date">DECEMBER 15,2021</p>
+            </article>
+            <article class="testimonials__carousel-item">
+                <img class="testimonials__carousel-photo" src="img/clients/gillian-adler.png" alt="photo of client">
+                <h2 class="testimonials__carousel-client-name">Gillian Adler</h2>
+                <p class="testimonials__carousel-comment">
                     "I have been practicing at Yoga Atta Studio for two years now. 
                     During this time, I have found many friends and like-minded people here. 
                     I like that this is not just a yoga studio, but a whole community that 
                     promotes a healthy approach to mind, body, and life overall"
                 </p>
-                <h4>MARCH 02, 2022</h4>
-            </li>
-            <li>
-                <img src="img/clients/ashley-parson.png" alt="photo of client">
-                <h2>Ashley Parson</h2>
-                <p>
+                <p class="testimonials__carousel-date">MARCH 02, 2022</p>
+            </article>
+            <article class="testimonials__carousel-item">
+                <img class="testimonials__carousel-photo" src="img/clients/ashley-parson.png" alt="photo of client">
+                <h2 class="testimonials__carousel-client-name">Ashley Parson</h2>
+                <p class="testimonials__carousel-comment">
                     "Yoga is my path to a healthy and flexible body. I tried different 
                     sports, but they quickly tired me. Yoga helps me to be in good 
                     shape without exhausting phisycal exertion. In addition, I like the 
                     studio itself where classes are held and the coaches — very pleasant and polite people."
                 </p>
-                <h4>NOVEMBER 12, 2022</h4>
-            </li>
-        </ul>
+                <p class="testimonials__carousel-date">NOVEMBER 12, 2022</p>
+            </article>
+        </div>
     </div>
 </section>
