--- a/main-transform-yourself.partial.html
+++ b/main-transform-yourself.partial.html
@@ -1,8 +1,8 @@
-<section>
-    <div>
-        <img src="img/lotus-icon.svg" alt="lotus icon">
-        <h2>Transform Your Body, Mind, and Life Today!</h2>
-        <p>Transform Your Body, Mind, and Life Today!</p>
-        <a href="#">JOIN US NOW</a>
+<section class="transform-yourself">
+    <div class="transform-yourself__container">
+        <img class="transform-yourself__container-image" src="img/lotus-icon.svg" alt="lotus icon">
+        <h2 class="transform-yourself__container-title">Transform Your Body, Mind, and Life Today!</h2>
+        <p class="transform-yourself__container-text">Transform Your Body, Mind, and Life Today!</p>
+        <a class="transform-yourself__container-link button" href="#">JOIN US NOW</a>
     </div>
 </section>
