--- a/footer.partial.html
+++ b/footer.partial.html
@@ -1,27 +1,26 @@
-<section>
-    <div>
-        <img src="img/bottom-logo.svg" alt="logo with Atta script">
-        <h2>Your Spiritual Heaven</h2>
-        <nav>
-            <ul>
-                <li>About</li>
-                <li>Classes</li>
-                <li>Schedule</li>
-                <li>Pricing</li>
-                <li>Contacts</li>
-            </ul>
+<footer class="footer">
+    <div class="footer__main">
+        <img class="footer__main-logo" src="img/bottom-logo.svg" alt="logo with Atta script">
+        <h2 class="footer__main-title">Your Spiritual Heaven</h2>
+        <nav class="footer__main-navigation navigation">
+            <a class="navigation__item" href="#">About</a>
+            <a class="navigation__item" href="#">Classes</a>
+            <a class="navigation__item" href="#">Schedule</a>
+            <a class="navigation__item" href="#">Pricing</a>
+            <a class="navigation__item" href="#">Contacts</a>
         </nav>
-        <p>Find balance and serenity in this hectic life through yoga practices in our studio. 
+        <p class="footer__main-text">
+            Find balance and serenity in this hectic life through yoga practices in our studio. 
             Heal your body and soul and become a healthier person.
         </p>
     </div>
-    <div>
-        <ul>
-            <li><a href="https://facebook.com"><img src="img/social-icons.webp" alt="facebook icon"></a></li>
-            <li><a href="https://instagram.com"><img src="img/social-icons.webp" alt="instagram icon"></a></li>
-            <li><a href="https://youtube.com"><img src="img/social-icons.webp" alt="youtube icon"></a></li>
-            <li><a href="https://twitter.com"><img src="img/social-icons.webp" alt="twitter icon"></a></li>
-        </ul>
-        <p>© Created by | All rights Reserved</p>
+    <div class="footer__bottom">
+        <article class="footer__bottom-links">
+            <a class="footer__bottom-link" href="https://facebook.com"><img src="img/social-icons.webp" alt="facebook icon"></a>
+            <a class="footer__bottom-link" href="https://instagram.com"><img src="img/social-icons.webp" alt="instagram icon"></a>
+            <a class="footer__bottom-link" href="https://youtube.com"><img src="img/social-icons.webp" alt="youtube icon"></a>
+            <a class="footer__bottom-link" href="https://twitter.com"><img src="img/social-icons.webp" alt="twitter icon"></a>
+        </article>
+        <p class="footer__bottom-copyright">© Created by | All rights Reserved</p>
     </div>
-</section>
+</footer>
