--- a/header.partial.html
+++ b/header.partial.html
@@ -1,17 +1,15 @@
-<section>
-    <div>
+<header class="header">
+    <div class="header__logo">
         <img src="img/logo-image.svg" alt="logo with lotus and name of site">
     </div>
-    <nav>
-        <ul>
-            <li>About</li>
-            <li>Classes</li>
-            <li>Pricing</li>
-            <li>Schedule</li>
-            <li>Contacts</li>
-        </ul>
-        <div>
-            <p>☎<span>+1(234)567-89-00</span></p>
-        </div>
-    </nav>
-</section>
+    <nav class="header__menu">
+        <a class="header__menu-item" href="#">About</a>
+        <a class="header__menu-item" href="#">Classes</a>
+        <a class="header__menu-item" href="#">Pricing</a>
+        <a class="header__menu-item" href="#">Schedule</a>
+        <a class="header__menu-item" href="#">Contacts</a>
+    </ul>
+    <div class="header__phone">
+        <p>☎<span class="header__phone-number">+1(234)567-89-00</span></p>
+    </div>
+</header>
