--- a/main-about-us.partial.html
+++ b/main-about-us.partial.html
@@ -1,49 +1,53 @@
-<section>
-    <div>
-        <h4>ABOUT US</h4>
-        <h2>Plunge Yourself Into the Spiritual World of Yoga</h2>
-        <p>
+<section class="about-us">
+    <div class="about-us__main">
+        <div class="about-us__main-header about-header">
+            <p class="about-header__annotation">ABOUT US</p>
+            <h2 class="about-header__title">Plunge Yourself Into the Spiritual World of Yoga</h2>
+        </div>
+        <p class="about-us__main-text">
             Atta Yoga is a community of people dedicated to sharing our years of practice of yoga 
             so that you can truly meet yourself. All our classes combine flow, yogic teachings, music, 
             and exploration. Sign up for the first lesson and join any yoga practices you like.
         </p>
     </div>
-    <div>
-        <h3>Our method of training is staying true to the Gurukula system.</h3>
-        <p>
+    <div class="about-us__content">
+        <h3 class="about-us__content-title">Our method of training is staying true to the Gurukula system.</h3>
+        <p class="about-us__content-text">
             We offer a comprehensive inner adventure with the guarantee of high quality and personal touch. 
             Our retreats are the perfect way to unwind and relax in a friendly environment.
         </p>
-        <p>
+        <p class="about-us__content-text">
             At the Atta Yoga studio, we know that yoga is vital to remain grounded both physically 
             and mentally during hard times. We continue making yoga accessible to everyone, both in person and online. 
             We offer a variety of classes and affordable payment options.
         </p>
-        <div>
-            <h4>YOGA TYPES</h4>
-            <hr>
-            <ul>
-                <li>Yoga Basics</li>
-                <li>Ashtanga Yoga</li>
-                <li>Vinyasa Yoga</li>
-                <li>Hatha Yoga</li>
-                <li>Prenatal Yoga</li>
-                <li>Yin Yoga</li>
-                <li>Meditation Classes</li>
-            </ul>
-        </div>
-        <div>
-            <h4>CONDITIONS</h4>
-            <hr>
-            <ul>
-                <li>Stress + Mental Health</li>
-                <li>Digestive Conditions</li>
-                <li>Back Pain, Neck Pain</li>
-                <li>Post-Surgical Support</li>
-                <li>Migraines, Headaches</li>
-                <li>Reproductive Health</li>
-                <li>Depression</li>
-            </ul>
-        </div>
+        <div class="about-us__content-lists about-us__lists">
+            <div class="about-us__lists-item">
+                <h4 class="about-us__list-title">YOGA TYPES</h4>
+                <hr class="about-us__list-line">
+                <ul class="about-us__list">
+                    <li class="about-us__list-item">Yoga Basics</li>
+                    <li class="about-us__list-item">Ashtanga Yoga</li>
+                    <li class="about-us__list-item">Vinyasa Yoga</li>
+                    <li class="about-us__list-item">Hatha Yoga</li>
+                    <li class="about-us__list-item">Prenatal Yoga</li>
+                    <li class="about-us__list-item">Yin Yoga</li>
+                    <li class="about-us__list-item">Meditation Classes</li>
+                </ul>
+            </div>
+            <div class="about-us__lists-item">
+                <h4 class="about-us__list-title">CONDITIONS</h4>
+                <hr class="about-us__list-line">
+                <ul class="about-us__list">
+                    <li class="about-us__list-item">Stress + Mental Health</li>
+                    <li class="about-us__list-item">Digestive Conditions</li>
+                    <li class="about-us__list-item">Back Pain, Neck Pain</li>
+                    <li class="about-us__list-item">Post-Surgical Support</li>
+                    <li class="about-us__list-item">Migraines, Headaches</li>
+                    <li class="about-us__list-item">Reproductive Health</li>
+                    <li class="about-us__list-item">Depression</li>
+                </ul>
+            </div>
+        </div>  
     </div>
 </section>
