--- a/main-special-offer.partial.html
+++ b/main-special-offer.partial.html
@@ -1,17 +1,17 @@
-<section>
-    <h4>SPECIAL OFFER</h4>
-    <h2>Yoga is For Everyone!</h2>
-    <h3>Get your -10% discount on all classes.</h3>
-    <p>
+<section class="special-offer">
+    <p class="special-offer__annotation">SPECIAL OFFER</p>
+    <h2 class="special-offer__title">Yoga is For Everyone!</h2>
+    <p class="special-offer__subtitle">Get your -10% discount on all classes.</p>
+    <p class="special-offer__text">
         We offer a <span>10% discount</span> on the first class or membership, 
         so that you can get to know our yoga instructors better and choose classes to your liking.
     </p>
-    <p>
+    <p class="special-offer__text">
         All you need is to contact our managers and sign up for the first lesson. 
         When you come to our studio, you will pay for one lesson or the selected membership with a 10% discount.
     </p>
-    <div>
-        <a href="#">START YOGA TODAY</a>
-        <a href="#">LEARN MORE</a>
+    <div class="special-offer__links">
+        <a class="special-offer__link button" href="#">START YOGA TODAY</a>
+        <a class="special-offer__link button" href="#">LEARN MORE</a>
     </div>
 </section>
