--- a/main-video.partial.html
+++ b/main-video.partial.html
@@ -1,4 +1,4 @@
-<section>
+<section class="video">
     <iframe src="https://www.youtube.com/embed/ZBiu1RDQwzQ?si=CsZ7Am4oC_FX4seL" 
     title="stretching video" frameborder="0" 
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
