add color and text style

--- a/footer.partial.html
+++ b/footer.partial.html
@@ -2,12 +2,12 @@
     <div class="footer__main">
         <img class="footer__main-logo" src="img/bottom-logo.svg" alt="logo with Atta script">
         <h2 class="footer__main-title">Your Spiritual Heaven</h2>
-        <nav class="footer__main-navigation navigation">
-            <a class="navigation__item" href="#">About</a>
-            <a class="navigation__item" href="#">Classes</a>
-            <a class="navigation__item" href="#">Schedule</a>
-            <a class="navigation__item" href="#">Pricing</a>
-            <a class="navigation__item" href="#">Contacts</a>
+        <nav class="footer__main-menu footer__menu">
+            <a class="footer__menu-item" href="#">About</a>
+            <a class="footer__menu-item" href="#">Classes</a>
+            <a class="footer__menu-item" href="#">Schedule</a>
+            <a class="footer__menu-item" href="#">Pricing</a>
+            <a class="footer__menu-item" href="#">Contacts</a>
         </nav>
         <p class="footer__main-text">
             Find balance and serenity in this hectic life through yoga practices in our studio. 
