--- a/header.partial.html
+++ b/header.partial.html
@@ -1,6 +1,6 @@
 <header class="header">
     <div class="header__logo">
-        <img src="img/logo-image.svg" alt="logo with lotus and name of site">
+        <img class="header__logo-image" src="img/logo-image.svg" alt="logo with lotus and name of site">
     </div>
     <nav class="header__menu">
         <a class="header__menu-item" href="#">About</a>
