--- a/index2.html
+++ b/index2.html
@@ -5,14 +5,14 @@
     <!--<meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atta Yoga</title>
-    <link rel="shortcut icon" href="img/lotus-icon.svg" type="image/x-icon">
-    <link rel="stylesheet" href="css/global.css">
+    <link rel="shortcut icon" href="img/shortcut-icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <header data-include="header.partial.html"></header>
     <main>
         <section data-include="main-beauty-and-mind.partial.html"></section>
-        <section data-include="main-stidio-offers.partial.html"></section>
+        <section data-include="main-studio-offers.partial.html"></section>
         <section data-include="main-video.partial.html"></section>
         <section data-include="main-about-us.partial.html"></section>
         <section data-include="main-join-us.partial.html"></section>
