--- a/main-about-us.partial.html
+++ b/main-about-us.partial.html
@@ -26,26 +26,26 @@
                 <h4 class="about-us__list-title">YOGA TYPES</h4>
                 <hr class="about-us__list-line">
                 <ul class="about-us__list">
-                    <li class="about-us__list-item">Yoga Basics</li>
-                    <li class="about-us__list-item">Ashtanga Yoga</li>
-                    <li class="about-us__list-item">Vinyasa Yoga</li>
-                    <li class="about-us__list-item">Hatha Yoga</li>
-                    <li class="about-us__list-item">Prenatal Yoga</li>
-                    <li class="about-us__list-item">Yin Yoga</li>
-                    <li class="about-us__list-item">Meditation Classes</li>
+                    <li class="about-us__list-item"><span class="list-item-decoration">● </span>Yoga Basics</li>
+                    <li class="about-us__list-item"><span class="list-item-decoration">● </span>Ashtanga Yoga</li>
+                    <li class="about-us__list-item"><span class="list-item-decoration">● </span>Vinyasa Yoga</li>
+                    <li class="about-us__list-item"><span class="list-item-decoration">● </span>Hatha Yoga</li>
+                    <li class="about-us__list-item"><span class="list-item-decoration">● </span>Prenatal Yoga</li>
+                    <li class="about-us__list-item"><span class="list-item-decoration">● </span>Yin Yoga</li>
+                    <li class="about-us__list-item"><span class="list-item-decoration">● </span>Meditation Classes</li>
                 </ul>
             </div>
             <div class="about-us__lists-item">
                 <h4 class="about-us__list-title">CONDITIONS</h4>
                 <hr class="about-us__list-line">
                 <ul class="about-us__list">
-                    <li class="about-us__list-item">Stress + Mental Health</li>
-                    <li class="about-us__list-item">Digestive Conditions</li>
-                    <li class="about-us__list-item">Back Pain, Neck Pain</li>
-                    <li class="about-us__list-item">Post-Surgical Support</li>
-                    <li class="about-us__list-item">Migraines, Headaches</li>
-                    <li class="about-us__list-item">Reproductive Health</li>
-                    <li class="about-us__list-item">Depression</li>
+                    <li class="about-us__list-item"><span class="list-item-decoration">● </span>Stress + Mental Health</li>
+                    <li class="about-us__list-item"><span class="list-item-decoration">● </span>Digestive Conditions</li>
+                    <li class="about-us__list-item"><span class="list-item-decoration">● </span>Back Pain, Neck Pain</li>
+                    <li class="about-us__list-item"><span class="list-item-decoration">● </span>Post-Surgical Support</li>
+                    <li class="about-us__list-item"><span class="list-item-decoration">● </span>Migraines, Headaches</li>
+                    <li class="about-us__list-item"><span class="list-item-decoration">● </span>Reproductive Health</li>
+                    <li class="about-us__list-item"><span class="list-item-decoration">● </span>Depression</li>
                 </ul>
             </div>
         </div>  
