--- a/main-special-offer.partial.html
+++ b/main-special-offer.partial.html
@@ -11,7 +11,7 @@
         When you come to our studio, you will pay for one lesson or the selected membership with a 10% discount.
     </p>
     <div class="special-offer__links">
-        <a class="special-offer__link button" href="#">START YOGA TODAY</a>
-        <a class="special-offer__link button" href="#">LEARN MORE</a>
+        <a class="special-offer__link link-start button" href="#">START YOGA TODAY</a>
+        <a class="special-offer__link link-more button" href="#">LEARN MORE</a>
     </div>
 </section>
