--- a/main-yoga-is-answer.partial.html
+++ b/main-yoga-is-answer.partial.html
@@ -1,6 +1,6 @@
 <section class="yoga-is-answer">
-    <fieldset class="yoga-is-answer__content">
+    <div class="yoga-is-answer__content">
         <h2 class="yoga-is-answer__content-title">Yoga is Your Answer</h2>
         <p class="yoga-is-answer__content-text">Yoga allows you to clear your mind and find inner peace. Feeling overwhelmed? Practice yoga.</p>
-    </fieldset>
+    </div>
 </section>
