--- a/main-beauty-and-mind.partial.html
+++ b/main-beauty-and-mind.partial.html
@@ -1,14 +1,16 @@
 <section class="beauty-and-mind">
-    <div class="beauty-and-mind__content">
-        <p class="beauty-and-mind__content-annotation">BEAUTY & MIND</p>
-        <h1 class="beauty-and-mind__content-title">Atta Yoga - Your Spiritual Heaven</h1>
-        <p class="beauty-and-mind__content-text">
-            Find balance and serenity in this hectic life through yoga practices. 
-            Heal your body and soul and become a healthier person.
-        </p>
-        <a class="beauty-and-mind__content-link button" href="#">JOIN US NOW</a>
-    </div>
-    <div class="beauty-and-mind__image">
-        <img src="img/woman-in-lotus-pose-main.png" alt="woman sitting in lotus pose and look slightly into side">
+    <div class="container">
+        <div class="beauty-and-mind__content">
+            <p class="beauty-and-mind__content-annotation">BEAUTY & MIND</p>
+            <h1 class="beauty-and-mind__content-title">Atta Yoga - Your Spiritual Heaven</h1>
+            <p class="beauty-and-mind__content-text">
+                Find balance and serenity in this hectic life through yoga practices. 
+                Heal your body and soul and become a healthier person.
+            </p>
+            <a class="beauty-and-mind__content-link button" href="#">JOIN US NOW</a>
+        </div>
+        <div class="beauty-and-mind__image">
+            <img src="img/woman-in-lotus-pose-main.png" alt="woman sitting in lotus pose and look slightly into side">
+        </div>
     </div>
 </section>
