--- a/main-studio-offers.partial.html
+++ b/main-studio-offers.partial.html
@@ -1,32 +1,34 @@
 <section class="studio-offers">
-    <div class="studio-offers__item">
-        <img class="studio-offers__item-image" src="img/yoga-pose-icons/relax.svg" alt="yoga pose icon relax">
-        <h2 class="studio-offers__item-title">Relax</h2>
-        <hr class="studio-offers__item-line">
-        <p class="studio-offers__item-text">Get rid of stress and annoying thoughts.</p>
-    </div>
-    <div class="studio-offers__item">
-        <img class="studio-offers__item-image" src="img/yoga-pose-icons/stretch.svg" alt="yoga pose icon stretch">
-        <h2 class="studio-offers__item-title">Stretch</h2>
-        <hr class="studio-offers__item-line stretch-line">
-        <p class="studio-offers__item-text">Make your body more flexible and supple.</p>
-    </div>
-    <div class="studio-offers__item">
-        <img class="studio-offers__item-image" src="img/yoga-pose-icons/stay-fit.svg" alt="yoga pose icon stay fit">
-        <h2 class="studio-offers__item-title">Stay Fit</h2>
-        <hr class="studio-offers__item-line">
-        <p class="studio-offers__item-text">Yoga is a great alternative to going to the gym.</p>
-    </div>
-    <div class="studio-offers__item">
-        <img class="studio-offers__item-image" src="img/yoga-pose-icons/meditate.svg" alt="yoga pose icon meditate">
-        <h2 class="studio-offers__item-title">Meditate</h2>
-        <hr class="studio-offers__item-line meditate-line">
-        <p class="studio-offers__item-text">Learn to control your own thoughts and life.</p>
-    </div>
-    <div class="studio-offers__item">
-        <img class="studio-offers__item-image" src="img/yoga-pose-icons/progress.svg" alt="yoga pose icon progress">
-        <h2 class="studio-offers__item-title">Progress</h2>
-        <hr class="studio-offers__item-line progress-line">
-        <p class="studio-offers__item-text">We offer classes for beginners and experts.</p>
+    <div class="container">
+        <div class="studio-offers__item">
+            <img class="studio-offers__item-image" src="img/yoga-pose-icons/relax.svg" alt="yoga pose icon relax">
+            <h2 class="studio-offers__item-title">Relax</h2>
+            <hr class="studio-offers__item-line">
+            <p class="studio-offers__item-text">Get rid of stress and annoying thoughts.</p>
+        </div>
+        <div class="studio-offers__item">
+            <img class="studio-offers__item-image" src="img/yoga-pose-icons/stretch.svg" alt="yoga pose icon stretch">
+            <h2 class="studio-offers__item-title">Stretch</h2>
+            <hr class="studio-offers__item-line stretch-line">
+            <p class="studio-offers__item-text">Make your body more flexible and supple.</p>
+        </div>
+        <div class="studio-offers__item">
+            <img class="studio-offers__item-image" src="img/yoga-pose-icons/stay-fit.svg" alt="yoga pose icon stay fit">
+            <h2 class="studio-offers__item-title">Stay Fit</h2>
+            <hr class="studio-offers__item-line">
+            <p class="studio-offers__item-text">Yoga is a great alternative to going to the gym.</p>
+        </div>
+        <div class="studio-offers__item">
+            <img class="studio-offers__item-image" src="img/yoga-pose-icons/meditate.svg" alt="yoga pose icon meditate">
+            <h2 class="studio-offers__item-title">Meditate</h2>
+            <hr class="studio-offers__item-line meditate-line">
+            <p class="studio-offers__item-text">Learn to control your own thoughts and life.</p>
+        </div>
+        <div class="studio-offers__item">
+            <img class="studio-offers__item-image" src="img/yoga-pose-icons/progress.svg" alt="yoga pose icon progress">
+            <h2 class="studio-offers__item-title">Progress</h2>
+            <hr class="studio-offers__item-line progress-line">
+            <p class="studio-offers__item-text">We offer classes for beginners and experts.</p>
+        </div>
     </div>
 </section>
