--- a/main-video.partial.html
+++ b/main-video.partial.html
@@ -1,6 +1,9 @@
 <section class="video">
-    <iframe src="https://www.youtube.com/embed/ZBiu1RDQwzQ?si=CsZ7Am4oC_FX4seL" 
-    title="stretching video" frameborder="0" 
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
-    </iframe>
+    <div class="container">
+        <iframe class="video__item" src="https://www.youtube.com/embed/ZBiu1RDQwzQ?si=CsZ7Am4oC_FX4seL" title="stretching video"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen>
+        </iframe>
+    </div>
 </section>
