--- a/main-beauty-and-mind.partial.html
+++ b/main-beauty-and-mind.partial.html
@@ -1,7 +1,7 @@
 <section class="beauty-and-mind">
     <div class="container">
         <div class="beauty-and-mind__content">
-            <p class="beauty-and-mind__content-annotation">BEAUTY & MIND</p>
+            <p class="beauty-and-mind__content-annotation annotation">BEAUTY & MIND</p>
             <h1 class="beauty-and-mind__content-title">Atta Yoga - Your Spiritual Heaven</h1>
             <p class="beauty-and-mind__content-text">
                 Find balance and serenity in this hectic life through yoga practices. 
