--- a/main-classes.partial.html
+++ b/main-classes.partial.html
@@ -1,6 +1,6 @@
 <section class="classes">
     <div class="classes__main">
-        <p class="classes__main-annotation">CLASSES</p>
+        <p class="classes__main-annotation annotation">CLASSES</p>
         <h2 class="classes__main-title">The Variety of Yoga Classes</h2>
         <p class="classes__main-subtitle">Select classes you would like to take.</p>
     </div>
