--- a/main-news.partial.html
+++ b/main-news.partial.html
@@ -1,6 +1,6 @@
 <section class="news">
     <div class="news__main">
-        <p class="news__main-annotation">NEWS</p>
+        <p class="news__main-annotation annotation">NEWS</p>
         <h2 class="news__main-title">News & Articles</h2>
         <p class="news__main-subtitle">Read more about yoga practices and Eastern approaches to mental and physical health.</p>
     </div>
