--- a/main-pricing.partial.html
+++ b/main-pricing.partial.html
@@ -1,6 +1,6 @@
 <section class="pricing">
     <div class="pricing__main">
-        <p class="pricing__main-annotation">PRISING</p>
+        <p class="pricing__main-annotation annotation">PRISING</p>
         <h2 class="pricing__main-title">Yoga Pricing Plans</h2>
         <p class="pricing__main-subtitle">We offer yearly and monthly memberships, class passes, and special online memberships.</p>
     </div>
