--- a/main-special-offer.partial.html
+++ b/main-special-offer.partial.html
@@ -1,5 +1,5 @@
 <section class="special-offer">
-    <p class="special-offer__annotation">SPECIAL OFFER</p>
+    <p class="special-offer__annotation annotation">SPECIAL OFFER</p>
     <h2 class="special-offer__title">Yoga is For Everyone!</h2>
     <p class="special-offer__subtitle">Get your -10% discount on all classes.</p>
     <p class="special-offer__text">
