--- a/main-teacher-training.partial.html
+++ b/main-teacher-training.partial.html
@@ -3,7 +3,7 @@
         <img class="teacher__container-image" src="img/woman-in-boat-pose.png" alt="woman perform boat pose">
     </div>
     <div class="teacher__content">
-        <p class="teacher__content-annotation">TEACHER TRAINING</p>
+        <p class="teacher__content-annotation annotation">TEACHER TRAINING</p>
         <h2 class="teacher__content-title">Become a Teacher or Just Improve Your Practice</h2>
         <p class="teacher__content-subtitle">We offer classes for all skill levels.</p>
         <p class="teacher__content-text">
