--- a/main-testimonials.partial.html
+++ b/main-testimonials.partial.html
@@ -1,6 +1,6 @@
 <section class="testimonials">
     <div class="testimonials__main">
-        <p class="testimonials__main-annotation">TESTIMONIALS</p>
+        <p class="testimonials__main-annotation annotation">TESTIMONIALS</p>
         <h2 class="testimonials__main-title">Clients Say About Us</h2>
         <p class="testimonials__main-subtitle">We appreciate your warm words and thoughts.</p>
     </div>
