--- a/main-join-us.partial.html
+++ b/main-join-us.partial.html
@@ -1,31 +1,39 @@
 <section class="join-us">
-    <div class="join-us__content">
-        <p class="join-us__content-annotation">JOIN</p>
-        <h2 class="join-us__content-title">Yoga for Beginners</h2>
-        <p class="join-us__content-subtitle">Join our classes for Level 1.</p>
-        <p  class="join-us__content-text">
-            Explore yoga during our beginner classes! Coaches will 
-            tell you more about yoga and teach you the basic things:
-        </p>
-        <ul class="join-us__content-list content-list">
-            <li class="content-list__item">
-                <img class="content-list__item-image" src="img/lotus-icon.svg" alt="lotus icon">
-                Basic poses;
-            </li>
-            <li class="content-list__item">
-                <img class="content-list__item-image" src="img/lotus-icon.svg" alt="lotus icon">
-                Transitional movements;
-            </li>
-            <li class="content-list__item">
-                <img class="content-list__item-image" src="img/lotus-icon.svg" alt="lotus icon">
-                How to breath properly.
-            </li>
-        </ul>
-        <a class="join-us__content-link button" href="#">SIGN UP</a>
+    <div class="container">
+        <div class="join-us__content">
+            <p class="join-us__content-annotation annotation">JOIN</p>
+            <h2 class="join-us__content-title">Yoga for Beginners</h2>
+            <p class="join-us__content-subtitle">Join our classes for Level 1.</p>
+            <p class="join-us__content-text">
+                Explore yoga during our beginner classes! Coaches will
+                tell you more about yoga and teach you the basic things:
+            </p>
+            <ul class="join-us__content-list content-list">
+                <li class="content-list__item">
+                    <svg class="content-list__item-image">
+                        <use href="img/lotus-icon.svg#lotus-icon"></use>
+                    </svg>
+                    Basic poses;
+                </li>
+                <li class="content-list__item">
+                    <img class="content-list__item-image" src="img/lotus-icon.svg" alt="lotus icon">
+                    Transitional movements;
+                </li>
+                <li class="content-list__item">
+                    <img class="content-list__item-image" src="img/lotus-icon.svg" alt="lotus icon">
+                    How to breath properly.
+                </li>
+            </ul>
+            <a class="join-us__content-link button" href="#">SIGN UP</a>
+        </div>
+        <div class="join-us__carousel">
+            <img class="join-us__carousel-photo" src="img/woman-in-shoulder-stand-pose.png"
+                alt="woman make shoulder stand pose while another woman help her holding legs">
+            <img class="join-us__carousel-photo" src="img/woman-hold-hands-between-her-scapulas.png"
+                alt="woman sitting on the floor and join her hands berween her woman-hold-hands-between-her-scapulas">
+            <img class="join-us__carousel-photo" src="img/group-of-women-in-triangle-pose.png"
+                alt="three women perform triangle pose">
+        </div>
     </div>
-    <div class="join-us__carousel">
-        <img class="join-us__carousel-photo" src="img/woman-in-shoulder-stand-pose.png" alt="woman make shoulder stand pose while another woman help her holding legs">
-        <img class="join-us__carousel-photo" src="img/woman-hold-hands-between-her-scapulas.png" alt="woman sitting on the floor and join her hands berween her woman-hold-hands-between-her-scapulas">
-        <img class="join-us__carousel-photo" src="img/group-of-women-in-triangle-pose.png" alt="three women perform triangle pose">
-    </div>
+
 </section>
